--- a/src/app/modules/sandbox/effective/team/mainTeam.html
+++ b/src/app/modules/sandbox/effective/team/mainTeam.html
@@ -54,7 +54,7 @@
                         <div class="card white" ng-if="team.enable">
                             <div class="card-content dark-primary-color center">
                                 <span class="card-title">
-                                    <a href="#/private/updateTeam/{{team._id}}/false" class="white-text"><small>{{team.label}}</small></a>
+                                    <a href="#/private/viewTeam/{{team._id}}/false" class="white-text"><small>{{team.label}}</small></a>
                                 </span>
                             </div>
                             <div class="card-action">
@@ -72,7 +72,7 @@
                         <div class="card white" ng-if="!team.enable">
                             <div class="card-content light-primary-color center">
                                 <span class="card-title">
-                                    <a href="#/private/updateTeam/{{team._id}}/false" class="primary-text-color"><small>{{team.label}}</small></a>
+                                    <a href="#/private/viewTeam/{{team._id}}/false" class="primary-text-color"><small>{{team.label}}</small></a>
                                 </span>
                             </div>
                             <div class="card-action">
