--- a/src/app/components/directives/sandbox/teamStats/teamStats.html
+++ b/src/app/components/directives/sandbox/teamStats/teamStats.html
@@ -1,3 +1,6 @@
+<filter-calendar meta="meta"></filter-calendar>
+
+
 <div class="container" ng-cloack>     
             
     <!-- Stats goals/sanction/use start -->
