--- a/src/app/modules/sandbox/effective/team/viewTeam.html
+++ b/src/app/modules/sandbox/effective/team/viewTeam.html
@@ -11,7 +11,7 @@
                 <span class="primary-text-color" translate="teamLabels.teamSheet"></span></span>
 
             <div class="card-content right-align card-toggle" >
-                <player-infos player="player"></player-infos>
+                <team-infos team="team"></team-infos>
                 <a href="#/private/updateTeam/{{team._id}}/false" class="btn-large btn-floating red">
                     <i class="large material-icons">mode_edit</i>
                 </a>
