--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -7,11 +7,11 @@
                     <div class="row">
                         <div class="col s12">
                             <div class="center-align">
-                                <h5 class="header col s12 accent-text-color" translate="landing.main-title"></h5>
+                                <h2 class="header col s12 white-text" translate="landing.main-title"></h2>
                                 <p class="text-white center">
                                     <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
                                                                 class="waves-effect waves-light btn btn-flat secondary-color btn-sm">
-                                    <i class="fa fa-android fa-fw fa-2x"></i> {{ 'navbar.download' | translate}}
+                                    <i class="fa fa-android fa-fw fa-2x"></i> {{ 'landing.calltoaction' | translate}}
                                 </a></p>
                             </div>
                         </div>
