--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -10,7 +10,7 @@
                                 <h2 class="header col s12 white-text" translate="landing.main-title"></h2>
                                 <p class="text-white center">
                                     <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
-                                                                class="waves-effect waves-light btn btn-flat secondary-color btn-sm">
+                                                                class="waves-effect waves-white secondary-color btn btn-flat btn-sm">
                                     <i class="fa fa-android fa-fw fa-2x"></i> {{ 'landing.calltoaction' | translate}}
                                 </a></p>
                             </div>
