--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -3,16 +3,17 @@
         <div class="valign">
             <div class="row">
                 <div class="col s12 center-align">
-                    <img src="assets/images/logo-mini.png" height="70px" class="hero-title"/>
+                    <img src="assets/images/logo-mini.png" class="responsive-img"/>
                     <div class="row">
                         <div class="col s12">
                             <div class="center-align">
                                 <h2 class="header col s12 white-text" translate="landing.main-title"></h2>
                                 <p class="text-white center">
                                     <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
-                                                                class="waves-effect waves-white secondary-color btn btn-flat btn-sm">
-                                    <i class="fa fa-android fa-fw fa-2x"></i> {{ 'landing.calltoaction' | translate}}
-                                </a></p>
+                                       class="waves-effect waves-white secondary-color btn btn-flat btn-sm">
+                                        <i class="fa fa-android fa-fw fa-2x"></i> {{ 'landing.calltoaction' |
+                                        translate}}
+                                    </a></p>
                             </div>
                         </div>
                     </div>
@@ -24,9 +25,22 @@
 <div class="home section container">
     <!--   Icon Section   -->
     <div class="row">
-        <div class="col m6 hide-on-small-and-down">
-            <div class="home-bg1 hidden" when-visible="animateElementIn"
-                 when-not-visible="animateElementOut"></div>
+        <div class="col m6 hide-on-small-and-down center-align">
+            <!-- <div class="home-bg1 hidden" when-visible="animateElementIn"
+                  when-not-visible="animateElementOut"></div>-->
+            <div class="outerdevice">
+                <div class="device">
+                    <slide-wrapper arrows="false">
+                        <ul class="slide screenshot">
+                            <li><img src="assets/images/handball/scsh01.png" class="responsive-img"></li>
+                            <li><img src="assets/images/handball/scsh01.png" class="responsive-img"></li>
+                            <li><img src="assets/images/handball/scsh01.png" class="responsive-img"></li>
+                            <li><img src="assets/images/handball/scsh01.png" class="responsive-img"></li>
+                        </ul>
+                    </slide-wrapper>
+                </div>
+
+            </div>
         </div>
 
         <div class="col s12 m6">
@@ -51,7 +65,7 @@
     </div>
 </div>
 
-<div class="home section" id="concept">
+<div class="home section container" id="concept">
     <div class="row">
         <div class="col m6 s12">
             <div class="row">
@@ -75,7 +89,7 @@
 <div class="home section container center-align" id="contact">
     <h4 class="primary-text-color" translate="landing.connect"></h4>
     <div class="valign-wrapper">
-        <ul class="social-icons center-align valign">
+        <ul class="social-icons center-align valign row">
             <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color"><i
                     class="fa fa-twitter-square fa-fw"></i><br/>Twitter</a></li>
             <li><a href="https://www.facebook.com/qaobee" target="_blank" class="accent-text-color"><i
