--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,4 +1,4 @@
-<div class="hero">
+<div class="zone1">
     <div class="valign-wrapper">
         <div class="valign">
             <div class="row">
@@ -25,7 +25,7 @@
 <div class="home section container">
     <!--   Icon Section   -->
     <div class="row">
-        <div class="col m6 hide-on-small-and-down center-align">
+        <div class="col s12 m4 hide-on-small-and-down center-align">
             <!-- <div class="home-bg1 hidden" when-visible="animateElementIn"
                   when-not-visible="animateElementOut"></div>-->
             <div class="outerdevice">
@@ -33,7 +33,7 @@
                     <slide-wrapper arrows="false">
                         <ul class="slide screenshot">
                             <li><img src="assets/images/handball/scsh01.png" class="responsive-img"></li>
-                            <li><img src="assets/images/handball/scsh01.png" class="responsive-img"></li>
+                            <li><img src="assets/images/handball/scsh02.png" class="responsive-img"></li>
                             <li><img src="assets/images/handball/scsh01.png" class="responsive-img"></li>
                             <li><img src="assets/images/handball/scsh01.png" class="responsive-img"></li>
                         </ul>
@@ -43,19 +43,19 @@
             </div>
         </div>
 
-        <div class="col s12 m6">
-            <h4 class="center primary-text-color" translate="landing.area-5.title"></h4>
+        <div class="col s12 m8">
+            <h4 class="center accent-text-color" translate="landing.area-5.title"></h4>
             <ul class="icon-block">
                 <li>
-                    <i class="fa fa-fw fa-eye"></i>
+                    <i class="fa fa-fw fa-eye accent-text-color"></i>
                     <span translate="landing.part-2.capture"></span>
                 </li>
                 <li>
-                    <i class="fa fa-fw fa-bar-chart"></i>
+                    <i class="fa fa-fw fa-bar-chart accent-text-color"></i>
                     <span translate="landing.part-2.analyze"></span>
                 </li>
                 <li>
-                    <i class="fa fa-fw fa-flag"></i>
+                    <i class="fa fa-fw fa-flag accent-text-color"></i>
                     <span translate="landing.part-2.progress"></span>
                 </li>
             </ul>
@@ -65,12 +65,37 @@
     </div>
 </div>
 
+<div class="zone3">
+    <div class="valign-wrapper">
+        <div class="valign">
+            <div class="row">
+                <div class="col s12 center-align">
+                    <img src="assets/images/logo-mini.png" class="responsive-img"/>
+                    <div class="row">
+                        <div class="col s12">
+                            <div class="center-align">
+                                <h2 class="header col s12 white-text" translate="landing.main-title"></h2>
+                                <p class="text-white center">
+                                    <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
+                                       class="waves-effect waves-white secondary-color btn btn-flat btn-sm">
+                                        <i class="fa fa-android fa-fw fa-2x"></i> {{ 'landing.calltoaction' |
+                                        translate}}
+                                    </a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="home section container" id="concept">
     <div class="row">
         <div class="col m6 s12">
             <div class="row">
                 <div class="col s12">
-                    <h4 class="col s12 center-align" translate="landing.part-2.title"></h4>
+                    <h4 class="col s12 center-align accent-text-color" translate="landing.part-2.title"></h4>
                     <h5 translate="landing.area-3.item-1.title"></h5>
                     <p translate="landing.area-3.item-1.content"></p>
                     <h5 translate="landing.area-3.item-2.title"></h5>
@@ -87,7 +112,7 @@
 </div>
 
 <div class="home section container center-align" id="contact">
-    <h4 class="primary-text-color" translate="landing.connect"></h4>
+    <h4 class="accent-text-color" translate="landing.connect"></h4>
     <div class="valign-wrapper">
         <ul class="social-icons center-align valign row">
             <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color"><i
@@ -113,7 +138,7 @@
         </div>
 
         <div class="col s12 m6">
-            <h4 class="primary-text-color" translate="landing.area-3.item-0.title"></h4>
+            <h4 class="accent-text-color" translate="landing.area-3.item-0.title"></h4>
             <p translate="landing.area-3.item-0.content"></p>
             <div class="row">
                 <div class="col s12 m6 center">
