--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1483,3 +1483,80 @@ slide-wrapper ul.bullets li.active {
     height: 200px;
     border-radius: 4px 4px 0 0;
 }
+.laptop {
+    width: 100%;
+    position: relative;
+}
+.laptop:before {
+    background: #222;
+    display: block;
+    content: "";
+    position: absolute;
+    width: 0.8rem;
+    height: 0.8rem;
+    border-radius: 50%;
+    top: 0.7rem;
+    left: calc(50% - 0.4rem);
+    z-index: 1000;
+}
+.laptop:after {
+    display: block;
+    content: "";
+    position: absolute;
+    width: 50%;
+    margin-left: 2.5%;
+    height: 0.75rem;
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+    border-radius: 5rem;
+}
+
+.upper {
+    width: 80%;
+    height: calc( 9/16 * 80%);
+    margin-bottom: -1rem;
+    background: #3d4144;
+    border: 2px solid #eaeaea;
+    border-bottom: none;
+    border-radius: 1.5rem 1.5rem 0 0;
+    margin-left: 10%;
+    box-shadow: inset 0 0 2px 2px #222;
+    position: relative;
+}
+.lower {
+    width: 100%;
+    height: 2rem;
+    background: #eaeaea;
+    border-radius: 2px;
+    position: relative;
+}
+.lower:before {
+    display: block;
+    content: "";
+    position: absolute;
+    width: 20%;
+    height: 0.8rem;
+    background: #a1a1a1;
+    left: 40%;
+    top: 0;
+    border-radius: 0 0 0.25rem 0.25rem;
+}
+.lower:after {
+    display: block;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 0.75rem;
+    background: #bababa;
+    top: 2rem;
+    border-bottom-right-radius: 7.5rem 2.5rem;
+    border-bottom-left-radius: 7.5rem 2.5rem;
+}
+.upper slide-wrapper {
+    width: 95%;
+    height: 100%;
+    margin: 1rem 2.5% 0;
+    min-height: 0;
+}
+.upper slide-wrapper ul.bullets {
+    margin-top: -30px;
+}
