--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -25,7 +25,7 @@
 <div class="home section container">
     <!--   Icon Section   -->
     <div class="row">
-        <div class="col s12 m4 hide-on-small-and-down center-align">
+        <div class="col s12 m4 center-align">
             <!-- <div class="home-bg1 hidden" when-visible="animateElementIn"
                   when-not-visible="animateElementOut"></div>-->
             <div class="outerdevice">
@@ -105,8 +105,20 @@
                 </div>
             </div>
         </div>
-        <div class="col m6 hide-on-small-and-down">
-            <div class="home-concept"></div>
+        <div class="col m6 s12">
+            <div class="laptop">
+                <div class="upper">
+                    <slide-wrapper arrows="false">
+                        <ul class="slide screenshot">
+                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
+                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
+                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
+                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
+                        </ul>
+                    </slide-wrapper>
+                </div>
+                <div class="lower"></div>
+            </div>
         </div>
     </div>
 </div>
