--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -22,47 +22,199 @@
         </div>
     </div>
 </div>
-<div class="home section container">
+<div class="home section" id="concept">
     <!--   Icon Section   -->
     <div class="row">
-        <div class="col s12 m4 center-align">
-            <!-- <div class="home-bg1 hidden" when-visible="animateElementIn"
-                  when-not-visible="animateElementOut"></div>-->
-            <div class="outerdevice">
-                <div class="device">
-                    <slide-wrapper arrows="false">
-                        <ul class="slide screenshot">
-                            <li><img src="assets/images/handball/scshApp01.png" class="responsive-img"></li>
-                            <li><img src="assets/images/handball/scshApp04.png" class="responsive-img"></li>
-                            <li><img src="assets/images/handball/scshApp05.png" class="responsive-img"></li>
-                            <li><img src="assets/images/handball/scshApp07.png" class="responsive-img"></li>
-                        </ul>
-                    </slide-wrapper>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="col s12 m8">
-            <h4 class="center accent-text-color" translate="landing.area-5.title"></h4>
+        <div class="col s12">
+            <h3 class="center accent-text-color" translate="landing.part-2.title"></h3>
+            <p>&nbsp;</p>
             <ul class="icon-block">
                 <li>
-                    <i class="fa fa-fw fa-eye accent-text-color"></i>
-                    <span translate="landing.part-2.capture"></span>
+                    <i class="fa fa-eye fa-3x fa-fw accent-text-color"></i>
+                    <h3 translate="landing.part-2.capture"></h3>
                 </li>
                 <li>
                     <i class="fa fa-fw fa-bar-chart accent-text-color"></i>
-                    <span translate="landing.part-2.analyze"></span>
+                    <h3 translate="landing.part-2.analyze"></h3>
                 </li>
                 <li>
                     <i class="fa fa-fw fa-flag accent-text-color"></i>
-                    <span translate="landing.part-2.progress"></span>
+                    <h3 translate="landing.part-2.progress"></h3>
                 </li>
             </ul>
 
-            <p translate="landing.area-5.content"></p>
+            
         </div>
     </div>
+</div>
+<div class="home section container">
+    <div class="row">
+        <div class="col s12 l7">
+            <div class="row"> 
+                <div class="col s4">
+                    <img src="../../../assets/images/icons/pricing-mobile-M.png" width="90%" height="90%" class="hide-on-med-and-up">
+                    <img src="../../../assets/images/icons/pricing-mobile-M.png" class="hide-on-small-only">
+                </div>
+                <div class="col s8 left-align secondary-text-color">
+                    <h4>{{'pricing.offers.standard.appMob' | translate}}</h4>
+                </div>
+
+                <div class="col s4">&nbsp;</div>
+                <div class="col s8 secondary-text-color"><hr></div>
+            </div>
+            <div class="row">    
+                <div class="col s4">
+                    <img src="../../../assets/images/icons/pricing-eye-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                    <img src="../../../assets/images/icons/pricing-eye-M.png" class="hide-on-small-only">
+                </div>
+                <div class="col s8 left-align">    
+                    <h5>{{'pricing.offers.standard.collectMob.title' | translate}}</h5>
+                    <span class="light-text-color">{{'pricing.offers.standard.collectMob.detail' | translate}}</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s4">
+                    <img src="../../../assets/images/icons/pricing-stats-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                    <img src="../../../assets/images/icons/pricing-stats-M.png" class="hide-on-small-only">
+                </div>
+                <div class="col s8 left-align">
+                    <h5>{{'pricing.offers.standard.statsMob.title' | translate}}</h5>
+                    <span class="light-text-color">{{'pricing.offers.standard.statsMob.detail' | translate}}</span>
+                </div>
+            </div>
+        </div>
+        <div class="col s12 l5">    
+            <div class="row">
+                <div class="col s12 center-align">
+                    <!-- <div class="home-bg1 hidden" when-visible="animateElementIn"
+                          when-not-visible="animateElementOut"></div>-->
+                    <div class="outerdevice">
+                        <div class="device">
+                            <slide-wrapper arrows="false">
+                                <ul class="slide screenshot">
+                                    <li><img src="assets/images/handball/scshApp01.png" class="  responsive-img"></li>
+                                    <li><img src="assets/images/handball/scshApp04.png" class="responsive-img"></li>
+                                    <li><img src="assets/images/handball/scshApp05.png" class="responsive-img"></li>
+                                    <li><img src="assets/images/handball/scshApp07.png" class="responsive-img"></li>
+                                </ul>
+                            </slide-wrapper>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+            <!--
+             <div class="row">
+                <div class="col s4">
+                    <img src="../../../assets/images/icons/pricing-teams-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                    <img src="../../../assets/images/icons/pricing-teams-M.png" class="hide-on-small-only">
+                </div>
+                <div class="col s8 left-align">
+                    <h5>{{'pricing.offers.standard.teamMob.title' | translate}}</h5>
+                    <span>{{'pricing.offers.standard.teamMob.detail' | translate}}</span>
+                </div>
+            </div>
+            <div class="row">    
+                <div class="col s4">
+                    <img src="../../../assets/images/icons/pricing-agenda-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                    <img src="../../../assets/images/icons/pricing-agenda-M.png" class="hide-on-small-only">
+                </div>
+                <div class="col s8 left-align">    
+                    <h5>{{'pricing.offers.standard.agendaMob.title' | translate}}</h5>
+                    <span>{{'pricing.offers.standard.agendaMob.detail' | translate}}</span>
+                </div>
+            </div>
+            -->
+            
+    </div>
+    <div class="row">&nbsp;</div>
+    <div class="row">&nbsp;</div>
+    <div class="row">&nbsp;</div>
+    <div class="row">
+        <div class="col s12 l7">
+            <div class="row"> 
+                <div class="col s4">
+                    <img src="../../../assets/images/icons/pricing-http-M.png" width="90%" height="90%" class="hide-on-med-and-up">
+                    <img src="../../../assets/images/icons/pricing-http-M.png" class="hide-on-small-only">
+                </div>
+                <div class="col s8 left-align secondary-text-color">
+                    <h4>{{'pricing.offers.standard.appWeb' | translate}}</h4>
+                </div>
+
+                <div class="col s4">&nbsp;</div>
+                <div class="col s8 secondary-text-color"><hr></div>
+            </div>
+
+            <div class="row">
+                <div class="col s4">
+                    <img src="../../../assets/images/icons/pricing-teams-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                    <img src="../../../assets/images/icons/pricing-teams-M.png" class="hide-on-small-only">
+                </div>
+                <div class="col s8 left-align">
+                    <h5>{{'pricing.offers.standard.teamWeb.title' | translate}}</h5>
+                    <span class="light-text-color">{{'pricing.offers.standard.teamWeb.detail' | translate}}</span>
+                </div>
+            </div>
+            <div class="row">    
+                <div class="col s4">
+                    <img src="../../../assets/images/icons/pricing-agenda-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                    <img src="../../../assets/images/icons/pricing-agenda-M.png" class="hide-on-small-only">
+                </div>
+                <div class="col s8 left-align">    
+                    <h5>{{'pricing.offers.standard.agendaWeb.title' | translate}}</h5>
+                    <span class="light-text-color">{{'pricing.offers.standard.agendaWeb.detail' | translate}}</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s4">
+                    <img src="../../../assets/images/icons/pricing-stats-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                    <img src="../../../assets/images/icons/pricing-stats-M.png" class="hide-on-small-only">
+                </div>
+                <div class="col s8 left-align">
+                    <h5>{{'pricing.offers.standard.statsWeb.title' | translate}}</h5>
+                    <span class="light-text-color">{{'pricing.offers.standard.statsWeb.detail' | translate}}</span>
+                </div>
+            </div>    
+            
+            <div class="row"><div class="col s12">&nbsp;</div></div>
+        </div>
+        
+        <div class="col l5 s12">
+            <div class="row">&nbsp;</div>
+            <div class="row">&nbsp;</div>
+            <div class="laptop">
+                <div class="upper">
+                    <slide-wrapper arrows="false">
+                        <ul class="slide screenshot">
+                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
+                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
+                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
+                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
+                        </ul>
+                    </slide-wrapper>
+                </div>
+                <div class="lower"></div>
+            </div>
+        </div>    
+    </div>
+    <div class="row"> 
+        <div class="col s2">
+            <img src="../../../assets/images/icons/pricing-share-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+            <img src="../../../assets/images/icons/pricing-share-M.png" class="hide-on-small-only">
+        </div>
+        <div class="col s10 left-align secondary-text-color">
+            <h4>{{'pricing.offers.standard.shareWeb.title' | translate}}</h4>
+        </div>
+
+        <div class="col s2">&nbsp;</div>
+        <div class="col s10 secondary-text-color"><hr></div>
+    </div>
+    <div class="row">
+        <div class="col s2">&nbsp;</div>
+        <div class="col s10 light-text-color"><span>{{'pricing.offers.standard.shareWeb.detail' | translate}}</span></div>
+    </div>
+    
 </div>
 
 <div class="zone3">
@@ -90,7 +242,7 @@
     </div>
 </div>
 
-<div class="home section container" id="concept">
+<div class="home section container" >
     <div class="row">
         <div class="col m6 s12">
             <div class="row">
@@ -105,39 +257,7 @@
                 </div>
             </div>
         </div>
-        <div class="col m6 s12">
-            <div class="laptop">
-                <div class="upper">
-                    <slide-wrapper arrows="false">
-                        <ul class="slide screenshot">
-                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
-                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
-                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
-                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
-                        </ul>
-                    </slide-wrapper>
-                </div>
-                <div class="lower"></div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="home section container center-align" id="contact">
-    <h4 class="accent-text-color" translate="landing.connect"></h4>
-    <div class="valign-wrapper">
-        <ul class="social-icons center-align valign row">
-            <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color"><i
-                    class="fa fa-twitter-square fa-fw"></i><br/>Twitter</a></li>
-            <li><a href="https://www.facebook.com/qaobee" target="_blank" class="accent-text-color"><i
-                    class="fa fa-facebook-square fa-fw"></i><br/>Facebook</a></li>
-            <li><a href="https://plus.google.com/+Qaobee/about" target="_blank" class="accent-text-color"><i
-                    class="fa fa-google-plus-square fa-fw"></i><br/>Google +</a></li>
-            <li><a href="mailto:contact@qaobee.com" class="accent-text-color"><i
-                    class="fa fa-envelope-square fa-fw"></i><br/>E-mail</a></li>
-            <li><a href="javascript:void(0);" data-target="modalSubMailingList" class="accent-text-color"><i
-                    class="fa fa-fw fa-pencil-square"></i><br/>Newsletter</a></li>
-        </ul>
+        
     </div>
 </div>
 
@@ -167,48 +287,6 @@
                     </a>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-<button data-target="modalSubMailingList" class="waves-effect waves-light btn-flat btn-sm accent-color mailing"><i
-        class="fa fa-pencil-square fa-fw"></i> Newsletter
-</button>
-<div id="modalSubMailingList" class="modal">
-    <div class="modal-header center-align ">
-        <h5>
-            <i class="fa fa-envelope-o"></i>
-            <span translate="landing.contact.popin.title"></span>
-        </h5>
-    </div>
-    <!-- Begin MailChimp Signup Form -->
-
-    <div id="mc_embed_signup">
-        <div class="modal-content grey lighten-3 ">
-            <form action="//qaobee.us13.list-manage.com/subscribe/post?u=d55c6a8036c505a3675d0b352&amp;id=883987d33d"
-                  method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
-                  novalidate>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <label for="mce-EMAIL" translate="landing.contact.popin.email"></label>
-                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" class="validate"
-                               required>
-                    </div>
-                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                        <input type="text" name="b_d55c6a8036c505a3675d0b352_883987d33d" tabindex="-1" value="">
-                    </div>
-
-                </div>
-                <div class="row center">
-                    <div class="col s12">
-                        <a href="#/" class="modal-action modal-close waves-effect waves-red btn red"
-                           translate="commons.buttons.cancel"></a>
-                        <button type="submit" class="btn waves-effect waves-red  green darken-1" value="Subscribe"
-                                name="subscribe"
-                                translate="commons.buttons.validate"></button>
-                    </div>
-                </div>
-            </form>
         </div>
     </div>
 </div>
