--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -265,8 +265,7 @@
     <!--   Icon Section   -->
     <div class="row">
         <div class="col m6 hide-on-small-and-down">
-            <div class="home-bg2 hidden" when-visible="animateElementIn"
-                 when-not-visible="animateElementOut"></div>
+            <div class="home-bg2"></div>
         </div>
 
         <div class="col s12 m6">
