--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -30,16 +30,19 @@
             <p>&nbsp;</p>
             <ul class="icon-block">
                 <li>
-                    <i class="fa fa-eye fa-3x fa-fw accent-text-color"></i>
-                    <h3 translate="landing.part-2.capture"></h3>
+                    <i class="fa fa-fw fa-eye accent-text-color"></i>
+                    <h3 translate="landing.part-2.capture" class="hide-on-small-only"></h3>
+                    <h5 translate="landing.part-2.capture" class="hide-on-med-and-up"></h5>
                 </li>
                 <li>
                     <i class="fa fa-fw fa-bar-chart accent-text-color"></i>
-                    <h3 translate="landing.part-2.analyze"></h3>
+                    <h3 translate="landing.part-2.analyze" class="hide-on-small-only"></h3>
+                    <h5 translate="landing.part-2.analyze" class="hide-on-med-and-up"></h5>
                 </li>
                 <li>
                     <i class="fa fa-fw fa-flag accent-text-color"></i>
-                    <h3 translate="landing.part-2.progress"></h3>
+                    <h3 translate="landing.part-2.progress" class="hide-on-small-only"></h3>
+                    <h5 translate="landing.part-2.progress" class="hide-on-med-and-up"></h5>
                 </li>
             </ul>
 
@@ -129,8 +132,6 @@
             
     </div>
     <div class="row">&nbsp;</div>
-    <div class="row">&nbsp;</div>
-    <div class="row">&nbsp;</div>
     <div class="row">
         <div class="col s12 l7">
             <div class="row"> 
@@ -181,8 +182,8 @@
         </div>
         
         <div class="col l5 s12">
-            <div class="row">&nbsp;</div>
-            <div class="row">&nbsp;</div>
+            <div class="row hide-on-small-only">&nbsp;</div>
+            <div class="row hide-on-small-only">&nbsp;</div>
             <div class="laptop">
                 <div class="upper">
                     <slide-wrapper arrows="false">
@@ -196,23 +197,26 @@
                 </div>
                 <div class="lower"></div>
             </div>
-        </div>    
+        </div>
+        <div class="row"><div class="col s12">&nbsp;</div></div>
     </div>
     <div class="row"> 
-        <div class="col s2">
-            <img src="../../../assets/images/icons/pricing-share-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-            <img src="../../../assets/images/icons/pricing-share-M.png" class="hide-on-small-only">
+        <div class="col s4 m2">
+            <i class="material-icons md-60">share</i>
         </div>
-        <div class="col s10 left-align secondary-text-color">
+        <div class="col s8 m10 left-align secondary-text-color">
             <h4>{{'pricing.offers.standard.shareWeb.title' | translate}}</h4>
         </div>
 
-        <div class="col s2">&nbsp;</div>
-        <div class="col s10 secondary-text-color"><hr></div>
+        <div class="col s4 m2">&nbsp;</div>
+        <div class="col s8 m10 secondary-text-color"><hr></div>
     </div>
     <div class="row">
-        <div class="col s2">&nbsp;</div>
-        <div class="col s10 light-text-color"><span>{{'pricing.offers.standard.shareWeb.detail' | translate}}</span></div>
+        <div class="col s4 m2">&nbsp;</div>
+        <div class="col s8 m10">
+            <h5>{{'pricing.offers.standard.shareWeb.detail' | translate}}</h5>
+            <span class="light-text-color">{{'pricing.offers.standard.statsWeb.detail' | translate}}</span>
+        </div>
     </div>
     
 </div>
@@ -243,45 +247,36 @@
 </div>
 
 <div class="home section container" >
-    <div class="row">
-        <div class="col m6 s12">
-            <div class="row">
-                <div class="col s12">
-                    <h4 class="col s12 center-align accent-text-color" translate="landing.part-2.title"></h4>
-                    <h5 translate="landing.area-3.item-1.title"></h5>
-                    <p translate="landing.area-3.item-1.content"></p>
-                    <h5 translate="landing.area-3.item-2.title"></h5>
-                    <p translate="landing.area-3.item-2.content"></p>
-                    <h5 translate="landing.area-3.item-3.title"></h5>
-                    <p translate="landing.area-3.item-3.content"></p>
-                </div>
-            </div>
+    <div class="row">        
+        <div class="col s12">
+            <h3 class="left-align accent-text-color" translate="landing.part-2.title"></h3>
+            <h5 translate="landing.area-3.item-1.title"></h5>
+            <p class="light-text-color" translate="landing.area-3.item-1.content"></p>
+            <h5 translate="landing.area-3.item-2.title"></h5>
+            <p class="light-text-color" translate="landing.area-3.item-2.content"></p>
+            <h5 translate="landing.area-3.item-3.title"></h5>
+            <p class="light-text-color" translate="landing.area-3.item-3.content"></p>
         </div>
-        
     </div>
 </div>
 
-<div class="home section container" id="download">
+<div class="home section dark-primary-color" id="download">
     <!--   Icon Section   -->
     <div class="row">
-        <div class="col m6 hide-on-small-and-down">
-            <div class="home-bg2"></div>
-        </div>
-
-        <div class="col s12 m6">
-            <h4 class="accent-text-color" translate="landing.area-3.item-0.title"></h4>
-            <p translate="landing.area-3.item-0.content"></p>
+        <div class="col s12 center-align">
+            <h4 class="white-text" translate="landing.area-3.item-0.title"></h4>
+            <p  class="center-align container"translate="landing.area-3.item-0.content"></p>
             <div class="row">
                 <div class="col s12 m6 center">
                     <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
-                       class="accent-text-color">
-                        <i class="fa fa-android fa-fw fa-2x"></i><br/>
+                       class="white-text">
+                        <i class="fa fa-android fa-fw fa-4x accent-text-color"></i><br/>
                         {{ 'landing.area-4.android' | translate}}
                     </a>
                 </div>
                 <div class="col s12 m6 center">
-                    <a href="#" target="_blank" class="accent-text-color">
-                        <i class="fa fa-apple fa-fw fa-2x"></i><br/>
+                    <a href="#" target="_blank" class="light-text-color">
+                        <i class="fa fa-apple fa-fw fa-4x accent-text-color"></i><br/>
                         {{ 'landing.area-4.iphone' | translate}}
                     </a>
                 </div>
